# SDL-Procedural-generation

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SDL_PRO_GEN.sln  copy_assets.cmake  create.bat  imgui.ini
SDL-Procedural-generation/: SDL-Procedural-generation.vcxproj
audio/: CMakeLists.txt
audio/inc/: AudioDevice.hpp  AudioManager.hpp  Sound.hpp
audio/src/: AudioDevice.cpp  Sound.cpp
data/: assets.xml  biomes.xml  chestLoot.xml  crafts.xml  enemies.xml  items.xml  objects.xml  tiles.xml
graphics/: CMakeLists.txt
graphics/inc/: Color.hpp  CommandBuffer.hpp  Font.hpp  GpuBuffer.hpp  GpuGraphicsPipeline.hpp  GpuRenderFunctions.hpp  GpuRenderer.hpp  GpuShader.hpp  GpuTexture.hpp  GpuTransferBuffer.hpp  GpuVertexBuffer.hpp  RenderBatch.hpp  RenderFunctions.hpp  Renderer.hpp  Sprite.hpp  SpriteAnimation.hpp  SpriteSheet.hpp  Surface.hpp  Text.hpp  TileMap.hpp  Vertex.hpp  ViewportGuard.hpp  Window.hpp
graphics/src/: Chunk.cpp  Color.cpp  Font.cpp  GpuGraphicsPipeline.cpp  GpuRenderer.cpp  GpuShader.cpp  RenderBatch.cpp  Renderer.cpp  Sprite.cpp  SpriteAnimation.cpp  SpriteSheet.cpp  Surface.cpp  Text.cpp  TileMap.cpp  ViewportGuard.cpp  Window.cpp
hide/: CMakePresets.json
inc/: BaseState.hpp  Biomes.hpp  Chunk.hpp  CollisionManager.hpp  Craft.hpp  CraftView.hpp  CraftingManager.hpp  Debug.hpp  DrunkWalker.hpp  EnemyManager.hpp  EnemySpawnManager.hpp  EnemySpawnSystem.hpp  Game.hpp  GameStates.hpp  GenerationData.hpp  Grid.hpp  InputManager.hpp  Inventory.hpp  Item.hpp  ItemManager.hpp  Manager.hpp  MapRange.hpp  Object.hpp  ObjectManager.hpp  Player.hpp  RandomizedItem.hpp  Renderer.hpp  ResourceManager.hpp  Sprite.hpp  Surface.hpp  Tile.hpp  TileManager.hpp  TileMap.hpp  Vec2Less.hpp  VertexBuffer.hpp  Window.hpp  World.hpp  WorldGenerator.hpp  WorldHelper.hpp  WorldOutput.hpp  (+3 more)
inc/ECS/: ApplyArmorEffects.hpp  ApplyDamageSystem.hpp  ApplyEffects.hpp  ApplyWeaponEffects.hpp  ButtonSoundSystem.hpp  ButtonSpriteSystem.hpp  ChangeMiningSizeSystem.hpp  ChestWindowSystem.hpp  CollectEssenceSystem.hpp  ComponentManager.hpp  Components.hpp  DeathSystem.hpp  DisplayHitMarksSystem.hpp  DropChestLootSystem.hpp  DropItemSystem.hpp  EnemyAISystem.hpp  Entity.hpp  EntityManager.hpp  EnttCopyComponents.hpp  FallDamageSystem.hpp  HealthRegenerationSystem.hpp  InventoryManageSystem.hpp  ItemDescriptionSystem.hpp  ManageButtonActionsSystem.hpp  ManageInvincibleStatusSystem.hpp  ObjectDurabilityDisplay.hpp  OpenChestSystem.hpp  PlayerCollisionSystem.hpp  PlayerComboSystem.hpp  RenderAccessoriesSystem.hpp  RenderCraftingUISystem.hpp  RenderEssenceCounter.hpp  RenderHealthBarSystem.hpp  RenderSystem.hpp  RenderUISystem.hpp  RenderWeaponCircle.hpp  RenderWeaponMenuSystem.hpp  ShowMessageSystem.hpp  Systems.hpp  UpdateEffects.hpp  (+1 more)
inc/UI/: Button.hpp  DynamicBackground.hpp  FillBar.hpp  InventoryView.hpp  UIElement.hpp  UISettings.hpp  UserInterface.hpp
noise/: CMakeLists.txt
noise/inc/: Noise.hpp  PerlynNoise.hpp  ValueNoise.hpp
noise/src/: Noise.cpp  PerlynNoise.cpp  ValueNoise.cpp
shaders/: PullSpriteBatch.vert.hlsl  TextureQuad.frag.hlsl  TextureQuad.vert.hlsl  TextureQuadColor.frag.hlsl  TileMap.vert.hlsl
src/: Biomes.cpp  Chunk.cpp  Craft.cpp  CraftView.cpp  CraftingManager.cpp  DrunkWalker.cpp  EnemyManager.cpp  EnemySpawnSystem.cpp  Game.cpp  InputManager.cpp  Inventory.cpp  Item.cpp  ItemManager.cpp  Manager.cpp  MapRange.cpp  Object.cpp  ObjectManager.cpp  ResourceManager.cpp  Sprite.cpp  Tile.cpp  TileManager.cpp  TileMap.cpp  Window.cpp  World.cpp  WorldGenerator.cpp  main.cpp
src/ECS/: Entity.cpp  EntityManager.cpp
src/UI/: Button.cpp  DynamicBackground.cpp  FillBar.cpp  InventoryView.cpp  UserInterface.cpp
